@@ -34,12 +34,12 @@ status_cast_cancel: 0
 
 // Will certain skill status-changes be removed on logout?
 // This mimics official servers, where Extremity Fist's no SP regen,
-// Strip Equipment, cooking effects are removed when you logout. Setting is:
+// Strip Equipment, and some other buffs are removed when you logout. Setting is:
 // 0 - remove nothing.
 // 1 - remove negative buffs (stripping, EF)
-// 2 - remove positive buffs (cooking)
+// 2 - remove positive buffs (maximize power, steel body...)
 // 3 - remove both negative and positive buffs.
-debuff_on_logout: 1
+debuff_on_logout: 3
 
 // Adjustment for the natural rate of resistance from status changes.
 // If 50, status defense is halved, and you need twice as much stats to block
